25 Despliegue/kubernetes/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
  labels:
    app: backend1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1-pod
          image: localhost:5000/backend1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3010
            initialDelaySeconds: 3
            periodSeconds: 20
          resources:
            requests:
              memory: "256M"
              cpu: 0.25
