25 Despliegue/kubernetes/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2-pod
          image: localhost:5000/backend2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3020
            initialDelaySeconds: 3
            periodSeconds: 20
          resources:
            requests:
              memory: "256M"
              cpu: 0.25
